--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "homepage": "https://github.com/jxmlearner/es6swiper#readme",
   "devDependencies": {
     "autoprefixer": "^9.4.9",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.5",
+    "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
