--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-loader": "7",
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^1.0.1",
+    "copy-webpack-plugin": "^5.0.1",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
     "eslint": "^5.15.0",
